kubernetes/services/media/jellyseerr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  selector: 
    matchLabels:
      app: jellyseerr
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - image: fallenbagel/jellyseerr:latest
        name: jellyseerr
        ports:
          - containerPort: 5055
            protocol: TCP
        volumeMounts:
          - mountPath: /app/config
            name: arrstack
      volumes:
        - name: arrstack
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
      restartPolicy: Always
